[package]
name = "sshing"
version = "0.1.4"
edition = "2021"
authors = ["Josh <josh@zelifcam.net>"]
description = "A terminal-based SSH connection manager"
license = "MIT"
repository = "https://github.com/joshjetson/sshing"
keywords = ["ssh", "tui", "terminal", "cli", "connection-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "sshing"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1.0"
dirs = "5.0"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
